<resources>
    <string name="app_name">MusicBeans</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="version">1.0</string>
    <string name="login_username_hint">Usuario</string>
    <string name="login_name_hint">Nombre Completo</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="validator_incorrect_date">Fecha Incorrecta</string>
    <string name="validator_password_structure">Formato de contraseña incorrecto</string>
    <string name="validator_incomplete_data_message">Por favor llenar todos los campos solicitados</string>
    <string name="validator_size_error_1">El tamaño mínimo es de </string>
    <string name="validator_size_error_2"> caracteres</string>
    <string name="login_sign_in_btn_text">Iniciar Sesión</string>
    <string name="login_sign_up_btn_text">Crear Nuevo Usuario</string>
    <string name="waiting_dialog_title">Por favor espere…</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="musicbeans_user">MUSIC|BEANS User</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="configuraci_n">Configuración</string>
    <string name="logut_success">Se cerró la sesión exitosamente</string>


</resources>
