<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    >
    <ImageView
        android:id="@+id/imgIcons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter" />
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/new_user_edUserName"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="56dp"

            android:background="#FFFFFF"
            android:drawableLeft="@drawable/correo_icon"
            android:drawableStart="@drawable/correo_icon"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/login_username_hint"
            android:inputType="textPersonName"
            android:paddingBottom="0dp"
            android:paddingEnd="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingStart="0dp"
            android:paddingTop="0dp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/new_user_edName"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_below="@+id/new_user_edUserName"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:background="#FFFFFF"
            android:drawableLeft="@drawable/username_icon"
            android:drawableStart="@drawable/username_icon"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/login_name_hint"
            android:inputType="textPersonName"
            android:paddingBottom="0dp"
            android:paddingEnd="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingStart="0dp"
            android:paddingTop="0dp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_user_edUserName" />

        <EditText
            android:id="@+id/new_user_edUserPassword"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/new_user_edName"
            android:layout_alignStart="@+id/new_user_edName"
            android:layout_below="@+id/new_user_edName"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:background="#FFFFFF"
            android:drawableLeft="@drawable/password_icon"
            android:drawableStart="@drawable/password_icon"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:paddingBottom="0dp"
            android:paddingEnd="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingStart="0dp"
            android:paddingTop="0dp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_user_edName" />

        <Button
            android:id="@+id/new_user_btnnew_user"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_below="@+id/new_user_edUserPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:text="@string/login_sign_up_btn_text"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_user_edUserPassword"
            app:layout_constraintVertical_bias="0.12" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="88dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/music_beans_logo" />
    </android.support.constraint.ConstraintLayout>


</RelativeLayout>
